# matlab-ndarray-tutorial

./: .gitignore  Cargo.toml  README.md  mat.npy
python/: Cargo.toml  README.md
python/data/: README.md
python/src/: lib.rs
rust/: Cargo.toml  README.md
rust/src/: lls.rs  pseudoinverse.rs
src/: lib.rs  lls.rs  pseudoinverse.rs
